# my_page

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs
cartridge/: Cargo.toml
cartridge/cartridge/: index.html
cartridge/src/: main.rs
cartridge/templates/: favicon.base64  index.html
content/: Cargo.toml
maker/: Cargo.toml  Makefile.toml
maker/src/: main.rs
maker/templates/: index.html
maker/www/: index.html
page/: Cargo.toml  Makefile.toml
page/src/: lib.rs
src/: lib.rs
templates/: index.html
templates/temp_assets/: my_page.js  my_page_bg.wasm
www/: index.html
www/scripts/: my_page.js  my_page_bg.wasm
