[package]
name = "content"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bitcoin = "0.29.2"

wasm-bindgen = "0.2.83"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.60"



[dependencies.web-sys]
version = "0.3.60"
features = [
  'CanvasRenderingContext2d',
  'console',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'KeyboardEvent',
  'MouseEvent',
  'MouseEventInit',
  'Node',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGl2RenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
  'Window',
  'BinaryType',
  'Blob',
  'ErrorEvent',
  'FileReader',
  'MessageEvent',
  'ProgressEvent',
  'WebSocket'
]

[profile.release]
wasm-opt = false
